# goit-ds-hw-02

./: .gitignore  README.md
task_manager_db/: create_db.py  create_tables.sql  pyproject.toml  queries.sql  seed.py
